# gnome-system-tools

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  gnome-system-tools.pc.in
.pc/: applied-patches
.pc/00_fix-missing-DATADIRNAME.patch/: configure.in
.pc/62_no_gettext.patch/: configure.in
.pc/70_gst-yelp.patch/: configure.in
.pc/gthread.patch/: configure.in
debian/: changelog  control  copyright  rules  watch
debian/patches/: 00_fix-missing-DATADIRNAME.patch  12_fix_exit.patch  25_sambashare_group_definition.patch  30_fix_services_admin_window.patch  50_fix_system_tools_pc.patch  70_gst-yelp.patch  80_gst-packages-common.patch  81_gst-packages-shares-admin.patch  82_gst-packages-time-admin.patch  91_shares_services_detection.patch  95_timezone_point_selection.patch  96_ubuntu_ntp_pool.patch  dont-ignore-oobsresult.patch  gthread.patch  hide_properties.patch  implicit_declaration.patch  max_group_name_32_chars.patch  remove_g_thread_init.patch  the_admin_group_is_sudo.patch  time-libm.patch
doc/: Makefile.in
doc/network/: Makefile.am  Makefile.in
doc/services/: Makefile.am  Makefile.in
doc/shares/: Makefile.am  Makefile.in
doc/time/: Makefile.am  Makefile.in
doc/time/cs/: time-admin.xml
doc/time/el/: time-admin.xml
doc/time/gl/: time-admin.xml
doc/time/nl/: Makefile.in
doc/time/pt_BR/: time-admin.xml
doc/time/sl/: time-admin.xml
doc/time/zh_CN/: time-admin.xml
icons/: Makefile.in
interfaces/: Makefile.in  network.ui  services.ui  time.ui  users.ui
pixmaps/: Makefile.in
src/: Makefile.in
(+101 files in other folders)
