@YELP_HELP_RULES@

HELP_ID = time-admin
HELP_FILES = time-admin.xml legal.xml
HELP_MEDIA = \
	figures/time-map.png		\
	figures/time-servers.png	\
	figures/time-tool-automatic.png	\
	figures/time-tool-manual.png

HELP_LINGUAS = ca cs de el en_GB es fr gl it oc pt_BR ru sl sv zh_CN

-include $(top_srcdir)/git.mk
